# mincaml-rs

./: Cargo.toml  README.md
minrt/: global_nocomment.ml  minrt_nocomment.ml  test.ml  tmp.ml
src/: alpha.rs  arg_parse.rs  closure.rs  flatten.rs  hp_alloc.rs  inline.rs  ir.rs  is_dependent.rs  knormal.rs  lib.rs  llvmcodegen.rs  main.rs  pararell.rs  pararell_shared.rs  parser.lalrpop  replaceExt.rs  replace_ext.rs  syntax.rs  template.rs  tmp  to_loop.rs  ty.rs  typing.rs  util.rs  wr_flow_graph.rs
