[package]
name = "mincaml-rs"
version = "0.1.0"
authors = ["uenoku <uenoku.tokotoko@gmail.com>"]
edition = "2018"
build="build.rs"

[dependencies]
lalrpop-util = "0.16.2"
regex = "0.2.0"
getopts = "0.2.0"
rpds = "0.5.0"
log = "0.4"
env_logger = "0.6"
failure="0.1.4"

[build-dependencies]
lalrpop = "0.16.2"
